Correction textarea modification titre et contraste bouton edition post

--- a/front/src/assets/styles/_variables.scss
+++ b/front/src/assets/styles/_variables.scss
@@ -5,7 +5,7 @@ $my-grey:#AFAFAF;
 $my-logo-color-dark:#FD2D01;
 $my-logo-color-light:#FFD7D7;
 
-$my-light-blue:lighten($my-deep-blue,40%);
+$my-light-blue:lighten($my-deep-blue,20%);
 
 $my-light-grey:lighten($my-grey,20%);
 $my-dark-grey:darken($my-grey,23%);
